--- a/.gitignore
+++ b/.gitignore
@@ -121,7 +121,8 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-
+assests/
+tools/flask_deploy.py
 # Flask stuff:
 instance/
 .webassets-cache
